Update posts hyml files

--- a/templates/posts/post_detail.html
+++ b/templates/posts/post_detail.html
@@ -32,8 +32,8 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star-half-stroke"></i>
-                    </span>
                         {% endif %}
+                    </span>    
                         <div class="time">
                             <span><i class="fas fa-clock"></i> {{ post.time_to_cook }} Minutes</span>
                         </div>
@@ -75,12 +75,12 @@
                         <hr class="hr-small">
                         {% if commented %}
                         <div class="alert alert-success" role="alert">
-                            Thanks {{ user.username }}. Your comment is awaiting for approval!
+                            Thanks {{ user.username }}. Your comment is awaiting approval!
                         </div>
                         {% else %}
                         {% if user.is_authenticated %}
                         <h4>Leave a Comment</h4>
-                        <p>Posting as: {{ user.username }}</p>
+                        <p>Posting as: {{ user.username | slice:":10"}}</p>
                         {% if user.profile.image %}
                         <img class="author-img" src="{{ user.profile.image.url }}" alt="User Image">
                         {% else %}
@@ -109,13 +109,11 @@
                             <p class="user-comment-title"></p>
                             <div class="mt-3 w-75"><i class="far fa-comment-dots"></i>{{ comment.body | linebreaks }}</div>
                         </div>
-                        <hr class="hr-small">
                     </div>
                     {% if user.is_authenticated and user.username == comment.name or user.is_superuser %}
-                    <a href="{% url 'edit_comment' comment.id %}" class="btn-edit btn-sm btn-secondary mb-3" aria-label="Go to the Edit Comments Page">Edit</a>
+                   <a href="{% url 'edit_comment' comment.id %}" class="btn-edit btn-sm btn-secondary mb-3" aria-label="Go to the Edit Comments Page">Edit</a>
                     <button type="button" class="btn-delete btn-sm btn-danger mb-3" data-bs-toggle="modal"
                         data-bs-target="#delete-comment">Delete</button>
-
                     <!-- Delete comment bootstrap modal-->
                     <div class="modal fade" id="delete-comment"
                         tabindex="-1" aria-hidden="true">
@@ -130,11 +128,11 @@
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary"
                                         data-bs-dismiss="modal">Close</button>
-                                        <a href="{% url 'delete_comment' comment.id %}" class="btn btn-danger" aria-label="Delete Comment">Delete</a>
-                                        </div>
-                                    </div>
+                                    <a href="{% url 'delete_comment' comment.id %}" class="btn btn-danger" aria-label="Delete Comment">Delete</a>
                                 </div>
                             </div>
+                        </div>
+                    </div>
                     {% endif %}
                     <hr class="hr-small">
                     {% endfor %}
