--- a/templates/posts/about.html
+++ b/templates/posts/about.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
 {% load static %}
-
 {% block content %}
 
 {% include 'components/sub_hero_section.html' %}
@@ -12,8 +11,8 @@
             <div class="row">
                 <div class="col-md-4">
                     <img class="mb-3 box-shadow bg-linear-gradient"
-                    src="{% static 'images/logos/logo-tasty-about.tasty.png' %}" alt="Tasty Blog Logo Image">
-                    <img class="mb-3 box-shadow " src="{% static 'images/small-img/chef_about.jpg' %}" alt="Tasty Blog Image">
+                        src="{% static 'images/logos/logo-tasty-blog-square-removebg-2.png' %}" alt="Tasty Blog Logo Image">
+                    <img class="mb-3 box-shadow " src="{% static 'images/small-img/tasty_blog_img_500x300.webp' %}" alt="Tasty Blog Image">
                 </div>
                 <div class="col-md-8">
                     <h3 class="sub-title">This blog is for anyone who loves to cook and for everyone who doesn’t.</h3>
