--- a/templates/posts/categories_posts.html
+++ b/templates/posts/categories_posts.html
@@ -13,7 +13,7 @@
                 {% for post in categories_posts %}
                 {% if forloop.counter == 2%}
                 <div class="col-md-4">
-                    <a href="{% url 'post_detail' post.slug %}" aria-label="Go to the post detail page">
+                    <a href="{% url 'post_detail' post.slug %}"  aria-label="Go to the post detail page">
                        <div class="content-box bg-linear-gradient">
                             <div class="content-img">
                                 <div class="overlay"></div>
@@ -179,7 +179,7 @@
                                 <span>{{ post.author }} | </span>
                                 <span><i class="fas fa-clock"></i>{{ post.timestamp | timesince }}| </span>
                                 <span><i class="fas fa-heart"></i>{{ post.number_of_likes }}</span>
-                                <<span class="text-secondary">| <i class="far fa-comments"></i></span>
+                                <span class="text-secondary">| <i class="far fa-comments"></i></span>
                             </div>
                         </div>
                     </a>
