--- a/templates/posts/contact.html
+++ b/templates/posts/contact.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+
 {% include 'components/sub_hero_section.html' %}
+
 <!-- CONTACT SECTION -->
 <section id="contact">
     <h2 class="title">Contact Us</h2>
@@ -10,9 +12,9 @@
             <div class="col-md-4">
                 <div class="contact-details">
                     <h4>Contact</h4>
-                    <p><i class="fas fa-phone"></i>+089 9648 84547</p>
-                    <p><i class="far fa-envelope"></i>info@tastyblog.com</p>
-                    <p><i class="fas fa-home"></i>2A Bow Lane - Dublin 8</p>
+                    <p><i class="fas fa-phone"></i>+353 83 825 903</p>
+                    <p><i class="far fa-envelope"></i>tasty.blog@info.com</p>
+                    <p><i class="fas fa-home"></i>St. Augustine Street 78a - Dublin 8</p>
                 </div>
                 <div>
                     <h4 id="email_alert" class="color-white">.</h4>
@@ -53,4 +55,5 @@
     </div>
 </section>
 <!-- END OF CONTACT SECTION -->
+
 {% endblock content %}
