--- a/templates/posts/index.html
+++ b/templates/posts/index.html
@@ -17,8 +17,8 @@
                     <div class="container">
                         <div class="overlay"></div>
                         <div class="carousel-caption text-start">
-                            <h2>Example headline.</h2>
-                            <p>Some representative placeholder content for the first slide of the carousel.</p>
+                            <h2>Tasty Blog</h2>
+                            <p>Enjoy Our Recipes Every Day!</p>
                             <p><a class="btn btn-lg btn-primary mt-4" href="#content" aria-label="Go to the content home section">Explore</a></p>
                         </div>
                     </div>
@@ -27,8 +27,8 @@
                     <div class="container">
                         <div class="overlay"></div>
                         <div class="carousel-caption text-start">
-                            <h2>Another example headline.</h2>
-                            <p>Some representative placeholder content for the second slide of the carousel.</p>
+                            <h2 class="">Tasty Blog</h2>
+                            <p>New Recipes And Tips Weekly!!</p>
                             <p><a class="btn btn-lg btn-primary mt-4" href="#content" aria-label="Go to the content home section">Explore</a></p>
                         </div>
                     </div>
@@ -37,8 +37,8 @@
                     <div class="container">
                         <div class="overlay"></div>
                         <div class="carousel-caption text-start">
-                            <h2>One more for good measure.</h2>
-                            <p>Some representative placeholder content for the third slide of this carousel.</p>
+                            <h2>Tasty Blog</h2>
+                            <p>Best Cocktails For The Summer!</p>
                             <p><a class="btn btn-lg btn-primary mt-4" href="#content" aria-label="Go to the content home section">Explore</a></p>
                         </div>
                     </div>
@@ -270,5 +270,5 @@
         </div>
     </section>
     <!-- CONTENT SECTION -->
-
+    
 {% endblock content %}
