--- a/templates/posts/profile.html
+++ b/templates/posts/profile.html
@@ -13,11 +13,12 @@
                 {% if user.profile.image %}
                 <img class="author-img" src="{{ user.profile.image.url }}" alt="User Image">
                 {% else %}
-                <img class="author-img" src="{% static 'images/small-img/user_profile_placeholder.jpg' %}" alt="User Image">
+                <img class="author-img" src="{% static 'images/small-img/user_profile_placeholder.jpg' %}"
+                    alt="User Image">
                 {% endif %}
             </div>
             <div class="user-info-box col-md-6">
-                <h3>Username: {{ user.username | slice:":15"}}  </h3>
+                <h3>Username: {{ user.username | slice:":15" }}</h3>
                 <h3>Email: {{ user.email }}</h3>
                 <h3>Time Logged: {{ user.last_login | timesince }}</h3>
                 {% if user.is_superuser %}
