Update components html files

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -41,7 +41,7 @@
                     <a class="nav-link active" aria-current="page" href="/blog" aria-label="Go to the blog page">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="/contact"aria-label="Go to the contact page">Contact</a>
+                    <a class="nav-link active" href="/contact" aria-label="Go to the contact page">Contact</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle active" id="navbarDropdown" role="button"
@@ -65,6 +65,7 @@
             </ul>
             {% if user.is_authenticated %}
             <ul class="d-flex login-box">
+                <!-- User authentication -->
                 <li class="nav-item display-inline">
                     <li><a href="/profile"><p class="nav-link">| <i class="fa fa-user" aria-hidden="true"></i>{{ user.username | slice:":10" }}</p></a></li>
                     {% if user.profile.image %}
@@ -85,7 +86,8 @@
                         <a class="nav-link" href="{% url 'account_login' %}" aria-label="Go to the login page">Login |</a>
                     </li>
                 </ul>
-                {% endif %}
+                    {% endif %}
+            
             <p id="search-box-button" class="btn"><i class="fas fa-search"></i></p>
         </div>
     </div>
