--- a/templates/components/head.html
+++ b/templates/components/head.html
@@ -3,13 +3,18 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- WEBSITE HEAD -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Tasty Blog - Food Recipies ">
+    <meta name="description" content="Join our Tasty Blog. You can search for the best recipes and try them! Drop a 
+     comment about it. Share your favorite cookbooks with other users">
+     <meta name="keywords" content="Food, recipes, chicken, lobster, salads, desserts, fish, cocktails, cookbooks, soups, beef">
     <!-- TITLE -->
     <title>Tasty Blog</title>
+    <!-- FAVICON -->
+    <link rel="icon" type="image/x-icon" href="{% static 'images/logos/favicon.png' %}">
 
     <!-- SCRIPT TO MAKE INTERNET EXPLORE BROWSER READING HTML5  -->
     <!--[if lt IE 9]>
@@ -29,4 +34,6 @@
         emailjs.init("cC-DOlxja-pr2ccKv");
     })();
     </script>
+    <!-- Email Js -->
 <body>
+<!-- END OF WEBSITE HEAD -->
