--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -32,7 +32,7 @@
         </div>
         <hr>
         <div class="copyright">
-            <h3><i class="far fa-copyright"></i> Copyright | Tasty Blog | <span id="year"></span></h3>
+            <h3><i class="far fa-copyright"></i> | Tasty Blog | <span id="year"></span></h3>
         </div>
     </div>
 </footer>
