--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -4,7 +4,7 @@
  <!-- SEARCH BOX SECTION -->
  <div id="search-box">
     <div class="search-nav">
-        <img src="{% static 'images/logos/logo-tasty-blog-small-removebg.png' %}" alt="Tasty blog logo">
+        <img src="{% static 'images/logos/logo-navbar.png' %}" alt="Tasty blog logo">
         <i class="fas fa-times"></i>
     </div>
     <div class="container h-100">
@@ -22,8 +22,8 @@
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a href="/" class="navbar-brand"><img
-                src="{% static 'images/logos/logo-tasty-blog-small-removebg.png' %}" alt="Tasty blog logo"></a>
+        <a href="/" class="navbar-brand">
+            <img src="{% static 'images/logos/Tasty Blog 400x76.png' %}" alt="Tasty blog logo"></a>
         <button class="navbar-toggler box-shadow" style="text-align: center;" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
