Update readme file

--- a/static/css/my_css.css
+++ b/static/css/my_css.css
@@ -696,7 +696,7 @@ body.modal-open {
 
 /*******************************
 *                              *
-*          Books PAGE          *
+*          BOOKS PAGE          *
 *                              *
 *******************************/
 .book-content .sub-title {
