--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -7,12 +7,13 @@
         <div class="row">
             <div class="col-md-5">
                 <div class="footer-text">
-                    <!--<figure>
-                        <img src="{% static 'images/logos/logo-tasty-blog-small-removebg.png' %}" alt="Tasty blog logo image">
-                    </figure> -->
-                    <p class="footer-text">Food is maybe the only universal thing that
-                        really has the power to bring everyone together. No matter what culture, everywhere around
-                        the world, people eat together.
+                    <figure>
+                        <img src="{% static 'images/logos/apple-touch-icon.png' %}" alt="Tasty blog logo image">
+                    </figure> 
+                    <p class="footer-text">“A recipe has no soul. 
+                        You, as the cook, must bring soul to the recipe.”
+
+                        – Thomas Keller
                     </p>
                 </div>
             </div>
