Add logo to search page and image to README

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -4,7 +4,7 @@
  <!-- SEARCH BOX SECTION -->
  <div id="search-box">
     <div class="search-nav">
-        <img src="{% static 'images/logos/logo-navbar.png' %}" alt="Tasty blog logo">
+        <img src="{% static 'images/logos/logo-about.tasty.png' %}" alt="Tasty blog logo">
         <i class="fas fa-times"></i>
     </div>
     <div class="container h-100">
