Change image path

--- a/static/css/my_css.css
+++ b/static/css/my_css.css
@@ -128,7 +128,7 @@ button,
 }
 
 .main-bg-mobile {
-    background: url("../images/small-img/main_bg_mobile.jpg");
+    background: url("https://res.cloudinary.com/dm4myijvz/image/upload/v1674782736/main_bg_ktk7cj.jpg");
     display: none;
 }
 
