--- a/static/css/my_css.css
+++ b/static/css/my_css.css
@@ -128,8 +128,8 @@ button,
 }
 
 .main-bg-mobile {
-    background: url("https://res.cloudinary.com/dm4myijvz/image/upload/v1674782736/main_bg_ktk7cj.jpg");
     display: none;
+    background: url("../images/main_bg.jpg");
 }
 
 .main-bg-desktop {
