--- a/static/css/my_css.css
+++ b/static/css/my_css.css
@@ -156,7 +156,7 @@ button,
     width: 100%;
     position: fixed;
     z-index: 2000;
-    background-image: url(../images/main_bg.jpg);
+    background: url("https://res.cloudinary.com/dm4myijvz/image/upload/v1674782736/main_bg_ktk7cj.jpg");
     display: none;
 }
 
