--- a/static/css/my_css.css
+++ b/static/css/my_css.css
@@ -129,7 +129,7 @@ button,
 
 .main-bg-mobile {
     display: none;
-    background: url("../images/main_bg.jpg");
+    background: url("/static/images/main_bg.jpg");
 }
 
 .main-bg-desktop {
@@ -156,7 +156,7 @@ button,
     width: 100%;
     position: fixed;
     z-index: 2000;
-    background: url("https://res.cloudinary.com/dm4myijvz/image/upload/v1674782736/main_bg_ktk7cj.jpg");
+    background: url("//static/images/main_bg.jpg");
     display: none;
 }
 
