Change image path name to validate html

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -23,7 +23,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a href="/" class="navbar-brand">
-            <img src="{% static 'images/logos/Tasty Blog 400x76.png' %}" alt="Tasty blog logo"></a>
+            <img src="{% static 'images/logos/Tasty_Blog400x76.png' %}" alt="Tasty blog logo"></a>
         <button class="navbar-toggler box-shadow" style="text-align: center;" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
