--- a/templates/components/head.html
+++ b/templates/components/head.html
@@ -14,7 +14,7 @@
     <!-- TITLE -->
     <title>Tasty Blog</title>
     <!-- FAVICON -->
-    <link rel="icon" type="image/x-icon" href="{% static 'images/logos/favicon.png' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'images/logos/favicon.ico' %}">
 
     <!-- SCRIPT TO MAKE INTERNET EXPLORE BROWSER READING HTML5  -->
     <!--[if lt IE 9]>
